graphchan_frontend/check_frontend_2.txt
warning: `/Users/max/.cargo/config` is deprecated in favor of `config.toml`
note: if you need to support cargo 1.38 or earlier, you can symlink `config` to `config.toml`
    Blocking waiting for file lock on package cache
    Blocking waiting for file lock on package cache
    Blocking waiting for file lock on package cache
    Checking graphchan_frontend v0.1.0 (/Users/max/Code/OrbWeaver/graphchan_frontend)
error[E0506]: cannot assign to `state.inspected_peer` because it is borrowed
  --> graphchan_frontend/src/app/ui/drawer.rs:33:25
   |
30 |                 if let Some(peer) = &state.inspected_peer {
   |                                     --------------------- `state.inspected_peer` is borrowed here
...
33 |                         state.inspected_peer = None;
   |                         ^^^^^^^^^^^^^^^^^^^^ `state.inspected_peer` is assigned to here but it was already borrowed
...
38 |                         if let Some(username) = &peer.username {
   |                                                  ------------- borrow later captured here by closure

warning: unused variable: `scale`
  --> graphchan_frontend/src/app/ui/graph.rs:77:82
   |
77 | fn step_graph_layout(nodes: &mut HashMap<String, GraphNode>, posts: &[PostView], scale: f32, thread_id: &str, repulsion_force: f32) {
   |                                                                                  ^^^^^
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default
help: if this is intentional, prefix it with an underscore
   |
77 | fn step_graph_layout(nodes: &mut HashMap<String, GraphNode>, posts: &[PostView], _scale: f32, thread_id: &str, repulsion_force: f32) {
   |                                                                                  +
help: you might have meant to pattern match on the similarly named constant `TOP_MARGIN`
   |
77 - fn step_graph_layout(nodes: &mut HashMap<String, GraphNode>, posts: &[PostView], scale: f32, thread_id: &str, repulsion_force: f32) {
77 + fn step_graph_layout(nodes: &mut HashMap<String, GraphNode>, posts: &[PostView], app::ui::chronological::TOP_MARGIN: f32, thread_id: &str, repulsion_force: f32) {
   |

warning: unused variable: `state`
   --> graphchan_frontend/src/app/ui/graph.rs:520:42
    |
520 | fn render_node_header(ui: &mut egui::Ui, state: &mut ThreadState, post: &PostView, zoom: f32) {
    |                                          ^^^^^ help: if this is intentional, prefix it with an underscore: `_state`

warning: unused variable: `go_back`
   --> graphchan_frontend/src/app/mod.rs:346:17
    |
346 |         let mut go_back = false;
    |                 ^^^^^^^ help: if this is intentional, prefix it with an underscore: `_go_back`

warning: variable does not need to be mutable
   --> graphchan_frontend/src/app/mod.rs:346:13
    |
346 |         let mut go_back = false;
    |             ----^^^^^^^
    |             |
    |             help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0506`.
warning: `graphchan_frontend` (lib) generated 4 warnings
error: could not compile `graphchan_frontend` (lib) due to 1 previous error; 4 warnings emitted
